fix: style reviews height for medium size screens so reviews do not overlap with footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -703,6 +703,10 @@ iframe {
         float: none;
         margin: auto;
     }
+
+    .reviews-container {
+        height: auto;
+    }
 }
 
 /* For medium screen sizes from 800px wide and down */
